--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -335,6 +335,20 @@
 
 <div class="content" role="main">
 
+  <nav>
+    <ul>
+      <li>
+        <a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">FirstComponent</a>
+      </li>
+      <li>
+        <a routerLink="/video-detail" routerLinkActive="active" ariaCurrentWhenActive="page">VideoDetail</a>
+      </li>
+      <li>
+        <a routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User link</a>
+      </li>
+    </ul>
+  </nav>
+  <router-outlet></router-outlet>
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
