update angular version, add video functions

--- a/src/app/pages/video/detail/detail.component.html
+++ b/src/app/pages/video/detail/detail.component.html
@@ -1,18 +1,5 @@
 <div>
-  <p>video-detail works!</p>
-  <table>
-    <thead>
-    <tr>
-      <td>表头1</td>
-      <td>表头2</td>
-      <td>表头3</td>
-      <td>表头4</td>
-      <td>表头5</td>
-    </tr>
-    </thead>
-  </table>
-
-  <h2>video</h2>
+  <h2>video {{id}}</h2>
   <e-ngx-xgplayer [options]="playerOptions"/>
   <div class="mse" id="mse"></div>
   <script src="https://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript">
