--- a/src/app/pages/video/list/list.component.html
+++ b/src/app/pages/video/list/list.component.html
@@ -1,1 +1,31 @@
-<p>list works!</p>
+<table mat-table [dataSource]="dataSource">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef>No.</th>
+    <td mat-cell *matCellDef="let element">{{element.id}}</td>
+  </ng-container>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>标题.</th>
+    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+  </ng-container>
+  <ng-container matColumnDef="durationSeconds">
+    <th mat-header-cell *matHeaderCellDef>时长.</th>
+    <td mat-cell *matCellDef="let element">{{element.durationSeconds}}</td>
+  </ng-container>
+  <ng-container matColumnDef="createBy">
+    <th mat-header-cell *matHeaderCellDef>创建人.</th>
+    <td mat-cell *matCellDef="let element">{{element.createBy}}</td>
+  </ng-container>
+  <ng-container matColumnDef="createTime">
+    <th mat-header-cell *matHeaderCellDef>创建时间.</th>
+    <td mat-cell *matCellDef="let element">{{element.createTime}}</td>
+  </ng-container>
+  <ng-container matColumnDef="updateBy">
+    <th mat-header-cell *matHeaderCellDef>最后修改.</th>
+    <td mat-cell *matCellDef="let element">{{element.updateBy}}</td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr
+    mat-row
+    (click)="gotoDetail(row)"
+    *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
