--- a/src/app/pages/video/video.component.html
+++ b/src/app/pages/video/video.component.html
@@ -1,1 +1,5 @@
-<p>video works!</p>
+<a class="button" routerLink="/video/upload" routerLinkActive="activebutton" ariaCurrentWhenActive="page">VideoUpload</a>
+<a class="button" routerLink="/video/detail" routerLinkActive="activebutton" ariaCurrentWhenActive="page">VideoDetail</a>
+<a class="button" routerLink="/video/list" routerLinkActive="activebutton" ariaCurrentWhenActive="page">VideoList</a>
+
+<router-outlet></router-outlet>
